// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionSheet.Footer/> should render correctly with horizontal 1`] = `
<div
  aria-label="horizontal footer"
  class="quill-action-sheet--footer quill-action-sheet--footer__variant--horizontal"
>
  <button
    class="quill-button quill-button__size--lg quill__color--primary-black quill-button__full-width"
    data-state=""
  >
    <span
      class="quill-button-label"
    >
      <p
        class="quill-typography quill-typography__body-text__size--md__weight--bold__decoration--default black"
      >
        action
      </p>
    </span>
  </button>
</div>
`;

exports[`<ActionSheet.Footer/> should render correctly with vertical 1`] = `
<div
  aria-label="vertical footer"
  class="quill-action-sheet--footer quill-action-sheet--footer__variant--vertical"
>
  <button
    class="quill-button quill-button__size--lg quill__color--primary-black quill-button__full-width"
    data-state=""
  >
    <span
      class="quill-button-label"
    >
      <p
        class="quill-typography quill-typography__body-text__size--md__weight--bold__decoration--default black"
      >
        action
      </p>
    </span>
  </button>
</div>
`;
